[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "SentryMode"
version = "0.1.0"
description = "A multi-factor monitoring toolkit for market signals."
readme = "README.md"
requires-python = ">= 3.12"
license = { text = "MIT" }
authors = [
    { name = "Adam Zhou", email = "jianzhou42@163.com" },
]
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "colorama>=0.4.6,<1.0.0",
    "httpx>=0.28.1,<1.0.0",
    "litellm>=1.82.4,<2.0.0",
    "numpy>=2.4.3,<3.0.0",
    "pandas>=3.0.1,<4.0.0",
    "pydantic>=2.12.5,<3.0.0",
    "pydantic-settings>=2.13.1,<3.0.0",
    "python-dotenv>=1.2.2,<2.0.0",
    "tiktoken>=0.12.0,<1.0.0",
]

[project.urls]
Homepage = "https://github.com/amazingchow/SentryMode"
Repository = "https://github.com/amazingchow/SentryMode"
Issues = "https://github.com/amazingchow/SentryMode/issues"

[dependency-groups]
dev = [
    "libcst>=1.8.6",
    "pre-commit>=4.3.0",
    "pyinstaller>=6.19.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.6",
]

[project.scripts]
sentrymode = "sentrymode.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sentrymode"]

[tool.ruff]
line-length = 120
lint.select = [
    "D",
    "E",
    "F",
    "I",
    "UP",
]
lint.ignore = [
    "D103",
    "D104",
    "D107",
    "D212",
    "E501",
    "E741",
    "UP006",
    "UP007",
    "UP015",
    "UP035",
    "UP045",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "google"
